--- a/src/pug/components/footer.pug
+++ b/src/pug/components/footer.pug
@@ -9,12 +9,12 @@ footer.footer
         a(href="#").link-big Write us on Email
       
       .footer__columns
-        a(href="#").link-main Behance
-        a(href="#").link-main Medium
-        a(href="#").link-main Dribbble
-        a(href="#").link-main Twitter
-        a(href="#").link-main Istagram
-        a(href="#").link-main LinkedIn
-        a(href="#").link-main Facebook
+        a(href="#").link-main.text-gray Behance
+        a(href="#").link-main.text-gray Medium
+        a(href="#").link-main.text-gray Dribbble
+        a(href="#").link-main.text-gray Twitter
+        a(href="#").link-main.text-gray Istagram
+        a(href="#").link-main.text-gray LinkedIn
+        a(href="#").link-main.text-gray Facebook
 
       a(href="#").link-main Terms & Privacy
