--- a/src/pug/page/blog.pug
+++ b/src/pug/page/blog.pug
@@ -27,3 +27,8 @@ block content
       img(src="/img/blog/item-1.jpg", alt="").single__img
 
       h3.title-h3.single__title Blog title number one how we use small grid in our site
+      h4.title-h4.single__subtitle Blog title number one how we use small grid in our site
+      p.text-main.single__text Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit. Exercitation veniam consequat sunt nostrud amet.<br>Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit. Exercitation veniam consequat sunt nostrud amet.Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit. Exercitation veniam consequat sunt nostrud amet.
+      p.text-main.single__text Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit. Exercitation veniam consequat sunt nostrud amet.<br>Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit. Exercitation veniam consequat sunt nostrud amet.Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit. Exercitation veniam consequat sunt nostrud amet.
+      h4.title-h4.single__subtitle Blog title number one how we use small grid in our site
+      img(src="/img/single/item-2.jpg", alt="").single__img
