--- a/src/scss/base/_main.scss
+++ b/src/scss/base/_main.scss
@@ -6,6 +6,14 @@ body {
   line-height: 1.6;
 }
 
+a {
+  transition: 0.3s color ease;
+
+  &:hover {
+    color: #656A77;
+  }
+}
+
 ::selection {
   background-color: $black;
   color: $white;
