--- a/src/scss/components/_header.scss
+++ b/src/scss/components/_header.scss
@@ -3,6 +3,7 @@
   top: 0;
   left: 0;
   right: 0;
+  z-index: 1000;
   height: 90px;
   background-color: $white;
 
@@ -16,7 +17,8 @@
 }
 
 .header-logo {
-  position: absolute;
+  position: fixed;
+  z-index: 1002;
   top: 13px;
   left: 140px;
 }
@@ -29,7 +31,8 @@
 }
 
 .hamburger {
-  position: absolute;
+  position: fixed;
+  z-index: 1002;
   top: 20px;
   right: 134px;
   width: 50px;
@@ -63,7 +66,7 @@
     }
   }
 
-  &.active span {
+  body.--menu & span {
     &:nth-child(1) {
       top: 50%;
       transform: translate(-50%, -50%) rotate(-45deg);
@@ -77,5 +80,40 @@
       top: 50%;
       transform: translate(-50%, -50%) rotate(45deg);
     }
+  }
+}
+
+.menu {
+  position: fixed;
+  padding: 120px 67px;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  z-index: 1000;
+  background-color: $white;
+  border-left: 1px solid #656A77;
+  transition: 0.3s transform ease;
+  transform: translateX(100%);
+
+  body.--menu & {
+    transform: translateX(10px);
+  }
+
+  &__list {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    gap: 20px;
+    margin-bottom: 80px;
+  }
+
+  &__columns {
+    display: grid;
+    grid-template-columns: 180px 180px;
+    gap: 20px;
+  }
+
+  &__sitemap {
+    margin-top: 80px;
   }
 }
