--- a/src/scss/components/_header.scss
+++ b/src/scss/components/_header.scss
@@ -6,14 +6,6 @@
   z-index: 1000;
   height: 90px;
   background-color: $white;
-
-  &__wrap {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    gap: 20px;
-    padding: 10px 140px;
-  }
 }
 
 .header-logo {
@@ -21,6 +13,10 @@
   z-index: 1002;
   top: 13px;
   left: 140px;
+
+  @media (max-width: 1899px) {
+    left: 100px;
+  }
 }
 
 .header-nav {
@@ -38,6 +34,10 @@
   width: 50px;
   height: 50px;
   cursor: pointer;
+
+  @media (max-width: 1899px) {
+    right: 94px;
+  }
 
   & span {
     position: absolute;
@@ -94,6 +94,10 @@
   border-left: 1px solid #656A77;
   transition: 0.3s transform ease;
   transform: translateX(100%);
+
+  body.--menu {
+    overflow: hidden;
+  }
 
   body.--menu & {
     transform: translateX(10px);
