--- a/src/pug/components/header.pug
+++ b/src/pug/components/header.pug
@@ -19,7 +19,7 @@ button.hamburger
     a(href="#").title-h3 Our projects
     a(href="/blog.html").title-h3 Blog
     a(href="#").title-h3 Contact
-    a(href="#").title-h3 Jobs
+    a(href="/job.html").title-h3 Jobs
     a(href="#").title-h3 For partners
   .menu__columns
     a(href="#").link-main Behance
