--- a/src/scss/helper/_grid.scss
+++ b/src/scss/helper/_grid.scss
@@ -10,63 +10,63 @@ body {
   right: 0;
   bottom: 0;
   left: 0;
-  z-index: 100;
+  z-index: 10000;
 
   content: "";
   pointer-events: none;
 
   --grid-color: rgb(255 0 0 / 0.1);
-  --grid-sides: 15px;
-  --grid-gutter: 30px;
-  --grid-columns: 12;
-  --grid-max-width: 1320px;
+  --grid-sides: 0px;
+  --grid-gutter: 2px;
+  --grid-columns: 24;
+  --grid-max-width: 1640px;
   --grid-column-width: calc(
     (100% - var(--grid-gutter) * var(--grid-columns)) / var(--grid-columns)
   );
 
   border: solid rgba(#007EFF, 0.2);
-  border-width: 0 max(calc((var(--screen-width) - var(--grid-max-width)) / 2), calc(var(--grid-sides) - var(--grid-gutter) / 2));
+  border-width: 0 calc((var(--screen-width) - var(--grid-max-width)) / 2);
 
   background-image: repeating-linear-gradient(
     to right,
-    transparent 0,
+    rgba(black, 0.2) 0,
+    rgba(black, 0.2) calc(var(--grid-gutter) / 2),
     transparent calc(var(--grid-gutter) / 2),
-    var(--grid-color) calc(var(--grid-gutter) / 2),
-    var(--grid-color) calc(var(--grid-column-width) + var(--grid-gutter) / 2),
     transparent calc(var(--grid-column-width) + var(--grid-gutter) / 2),
-    transparent calc(var(--grid-column-width) + var(--grid-gutter))
+    rgba(black, 0.2) calc(var(--grid-column-width) + var(--grid-gutter) / 2),
+    rgba(black, 0.2) calc(var(--grid-column-width) + var(--grid-gutter))
   );
 
   background-repeat: no-repeat;
 }
 
-@media (max-width: $laptop) {
+@media (max-width: 1600px) {
   .grid::before {
-    --grid-columns: 12;
-    --grid-max-width: 1140px;
+    --grid-columns: 24;
+    --grid-max-width: 1200px;
   }
 }
 
-@media (max-width: $tablet) {
+@media (max-width: 991px) {
   .grid::before {
     --grid-columns: 8;
     --grid-max-width: 960px;
   }
 }
 
-@media (max-width: $tablet-sm) {
+@media (max-width: 768px) {
   .grid::before {
     --grid-max-width: 720px;
   }
 }
 
-@media (max-width: $mobile-big) {
+@media (max-width: 575px) {
   .grid::before {
     --grid-max-width: 540px;
   }
 }
 
-@media (max-width: $mobile) {
+@media (max-width: 575px) {
   .grid::before {
     --grid-columns: 4;
   }
