--- a/src/scss/components/_header.scss
+++ b/src/scss/components/_header.scss
@@ -66,7 +66,8 @@
     }
   }
 
-  body.--menu & span {
+  body.--menu & span,
+  body.--post & span {
     &:nth-child(1) {
       top: 50%;
       transform: translate(-50%, -50%) rotate(-45deg);
@@ -88,6 +89,7 @@
   padding: 120px 67px;
   top: 0;
   right: 0;
+  width: calc((100vw - 1640px) / 2 + 68.3px * 10);
   bottom: 0;
   z-index: 1000;
   background-color: $white;
