--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -1,8 +1,11 @@
+@import '../../node_modules/swiper/swiper-bundle.css';
+
 @import './helper/settings';
 @import './helper/variables';
 @import './helper/colors';
 @import './helper/breakpoint';
 @import './helper/mixins';
+@import './helper/grid';
 
 @import './base/reset';
 @import './base/main';
