--- a/src/scss/page/_blog.scss
+++ b/src/scss/page/_blog.scss
@@ -24,6 +24,7 @@
   position: fixed;
   top: 0;
   right: 0;
+  width: calc((100vw - 1640px) / 2 + 68.3px * 10);
   z-index: 1001;
   height: 100vh;
   transform: translateX(100%);
@@ -40,11 +41,10 @@
   }
 
   &__wrap {
-    width: 755px;
-    padding: 40px 68px;
+    padding: 120px 68px 40px;
+    width: 68.3px * 11;
 
     @media (max-width: 1899px) {
-      width: 600px;
       padding: 40px 100px 40px 50px;
     }
   }
