--- a/src/scss/base/_container.scss
+++ b/src/scss/base/_container.scss
@@ -1,30 +1,40 @@
 .container {
-  max-width: 1670px;
+  max-width: calc(var(--container-width) + 40px);
   margin: 0 auto;
-  padding: 0 15px;
-  outline: 1px solid red;
-
-  @media (max-width: 1899px) {
-    max-width: 1230px;
-  }
+  padding: 0 20px;
 }
 
 .container__inside {
-  width: 683px;
-  margin-left: calc(100% - 683px - 68px * 3);
   transition: 0.3s margin-left ease;
 
-  @media (max-width: 1899px) {
-    width: 550px;
-    margin-left: calc(100% - 550px - 50px * 3);
+  @media (min-width: 768px) {
+    width: calc(var(--container-column-width) * 10);
+  }
+  
+  @media (min-width: 1200px) {
+    width: calc(var(--container-column-width) * 11);
+    margin-left: calc(var(--container-column-width) * 10);
+  }
+
+  @media (min-width: 1900px) {
+    width: calc(var(--container-column-width) * 10);
+    margin-left: calc(var(--container-column-width) * 11);
   }
 }
 
 body.--menu .container__inside,
 body.--post .container__inside {
-  margin-left: calc(68px * 3);
+  margin-left: 0;
 
-  @media (max-width: 1600px) {
-    margin-left: calc(50px * 2);
+  @media (min-width: 768px) {
+    
+  }
+  
+  @media (min-width: 1200px) {
+    margin-left: calc(var(--container-column-width) * 2);
+  }
+
+  @media (min-width: 1900px) {
+    margin-left: calc(var(--container-column-width) * 3);
   }
 }
