--- a/src/scss/helper/_grid.scss
+++ b/src/scss/helper/_grid.scss
@@ -4,6 +4,18 @@ body {
   --screen-width: 100vw;
 }
 
+.grid::after {
+  width: var(--container-column-width);
+  height: var(--container-column-width);
+  background-color: red;
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 10000;
+  display: block;
+  content: '';
+}
+
 .grid::before {
   position: fixed;
   top: 0;
@@ -15,59 +27,16 @@ body {
   content: "";
   pointer-events: none;
 
-  --grid-color: rgb(255 0 0 / 0.1);
-  --grid-sides: 0px;
-  --grid-gutter: 2px;
-  --grid-columns: 24;
-  --grid-max-width: 1640px;
-  --grid-column-width: calc(
-    (100% - var(--grid-gutter) * var(--grid-columns)) / var(--grid-columns)
-  );
-
   border: solid rgba(#007EFF, 0.2);
-  border-width: 0 calc((var(--screen-width) - var(--grid-max-width)) / 2);
+  border-width: 0 calc((var(--screen-width) - var(--container-width)) / 2);
 
   background-image: repeating-linear-gradient(
     to right,
     rgba(black, 0.2) 0,
-    rgba(black, 0.2) calc(var(--grid-gutter) / 2),
-    transparent calc(var(--grid-gutter) / 2),
-    transparent calc(var(--grid-column-width) + var(--grid-gutter) / 2),
-    rgba(black, 0.2) calc(var(--grid-column-width) + var(--grid-gutter) / 2),
-    rgba(black, 0.2) calc(var(--grid-column-width) + var(--grid-gutter))
+    rgba(black, 0.2) 1px,
+    transparent 1px,
+    transparent var(--container-column-width)
   );
 
   background-repeat: no-repeat;
-}
-
-@media (max-width: 1600px) {
-  .grid::before {
-    --grid-columns: 24;
-    --grid-max-width: 1200px;
-  }
-}
-
-@media (max-width: 991px) {
-  .grid::before {
-    --grid-columns: 8;
-    --grid-max-width: 960px;
-  }
-}
-
-@media (max-width: 768px) {
-  .grid::before {
-    --grid-max-width: 720px;
-  }
-}
-
-@media (max-width: 575px) {
-  .grid::before {
-    --grid-max-width: 540px;
-  }
-}
-
-@media (max-width: 575px) {
-  .grid::before {
-    --grid-columns: 4;
-  }
 }
