--- a/src/scss/components/_header.scss
+++ b/src/scss/components/_header.scss
@@ -12,7 +12,11 @@
   position: fixed;
   z-index: 1002;
   top: 13px;
-  left: calc((100vw - var(--container-width)) / 2);
+  left: 20px;
+
+  @media (min-width: 760px) {
+    left: calc((100vw - var(--container-width)) / 2);
+  }
 }
 
 .header-nav {
@@ -20,16 +24,33 @@
   align-items: center;
   gap: 80px;
   height: 90px;
+
+  @media (max-width: 1199px) {
+    gap: 50px;
+  }
+
+  @media (max-width: 759px) {
+    justify-content: flex-end;
+    margin-right: 63px;
+
+    & a:nth-child(-n + 2) {
+      display: none;
+    }
+  }
 }
 
 .hamburger {
   position: fixed;
   z-index: 1002;
   top: 20px;
-  right: calc((100vw - var(--container-width)) / 2 - 6px);
+  right: 14px;
   width: 50px;
   height: 50px;
   cursor: pointer;
+
+  @media (min-width: 760px) {
+    right: calc((100vw - var(--container-width)) / 2 - 6px);
+  }
 
   & span {
     position: absolute;
