--- a/src/scss/base/_link.scss
+++ b/src/scss/base/_link.scss
@@ -1,24 +1,34 @@
 .link-main {
   display: inline-block;
-  font-size: 18px;
-  line-height: if($pixel, 29px, 1.6);
+  font-size: 16px;
+  line-height: if($pixel, 26px, 1.6);
   font-weight: 700;
   text-decoration-line: underline;
   transition: 0.3s color ease;
 
+  @media (min-width: 760px) {
+    font-size: 18px;
+    line-height: if($pixel, 29px, 1.6);
+  }
+
   &:hover {
-    color: #656A77;
+    color: #656a77;
   }
 }
 
 .link-big {
-  font-size: 26px;
-  line-height: if($pixel, 42px, 1.6);
+  font-size: 20px;
+  line-height: if($pixel, 32px, 1.6);
   font-weight: 700;
   text-decoration-line: underline;
   transition: 0.3s color ease;
 
   &:hover {
-    color: #656A77;
+    color: #656a77;
+  }
+
+  @media (min-width: 760px) {
+    font-size: 26px;
+    line-height: if($pixel, 42px, 1.6);
   }
 }
