--- a/src/scss/components/_card.scss
+++ b/src/scss/components/_card.scss
@@ -2,10 +2,15 @@
   &__img {
     display: block;
     margin-bottom: 30px;
+    height: 230px;
+    object-fit: cover;
+
+    @media (mix-width: 760px) {
+      height: 318px;
+    }
   }
 
-  &__title,
-  &__text {
+  &__title {
     margin-bottom: 20px;
   }
 
