--- a/src/scss/page/_index.scss
+++ b/src/scss/page/_index.scss
@@ -16,6 +16,14 @@ section {
     margin-bottom: 80px;
   }
 
+  &__posts {
+    margin-top: 80px;
+
+    & > * {
+      margin-top: 80px;
+    }
+  }
+
   &__more {
     display: inline-block;
     margin-top: 80px;
