--- a/src/pug/components/footer.pug
+++ b/src/pug/components/footer.pug
@@ -5,8 +5,8 @@ footer.footer
       p.text-main.section__text From pre-seed to series, we accelerate the companies we believe in by generating serious brand equity, product traction.s
 
       .footer__columns
-        a(href="#").link-big Fill out brief
-        a(href="#").link-big Write us on Email
+        a(href="/brief.html").link-big Fill out brief
+        a(href="/contact.html").link-big Write us on Email
       
       .footer__columns
         a(href="#").link-main.text-gray Behance
@@ -17,4 +17,4 @@ footer.footer
         a(href="#").link-main.text-gray LinkedIn
         a(href="#").link-main.text-gray Facebook
 
-      a(href="#").link-main Terms & Privacy
+      a(href="/term.html").link-main Terms & Privacy
