--- a/src/pug/components/header.pug
+++ b/src/pug/components/header.pug
@@ -16,11 +16,11 @@ button.hamburger
 
 .menu
   .menu__list
-    a(href="#").title-h3 Our projects
+    a(href="/projects.html").title-h3 Our projects
     a(href="/blog.html").title-h3 Blog
-    a(href="#").title-h3 Contact
+    a(href="/contact.html").title-h3 Contact
     a(href="/job.html").title-h3 Jobs
-    a(href="#").title-h3 For partners
+    a(href="/partners.html").title-h3 For partners
   .menu__columns
     a(href="#").link-main Behance
     a(href="#").link-main Medium
@@ -30,4 +30,4 @@ button.hamburger
     a(href="#").link-main LinkedIn
     a(href="#").link-main Facebook
   
-  a(href="#").link-main.text-gray.menu__sitemap Sitemap
+  a(href="/sitemap.html").link-main.text-gray.menu__sitemap Sitemap
