--- a/src/pug/page/index.pug
+++ b/src/pug/page/index.pug
@@ -19,7 +19,7 @@ block content
               p.text-main.card__text From pre-seed to series, we accelerate the companies we believe in by generating serious brand equity, product traction, and market-penetrating strategies. Pre-seed to series, we accelerate the companies we believe in by generating serious brand equity, product traction, and market-penetrating strategies.s
         a(href="#").link-main.section__more More about us
   
-  section.section-third
+  section.section
     .container
       .container__inside
         h3.title-h2.section__title World recognition.
@@ -30,18 +30,19 @@ block content
             h3.title-h3.award__title Awwwards Year
             p.text-main.award__text Award for the best site of the month
   
-  section.section-slider
+  section.section
     .container
       .container__inside
-        h2.title-h2.section__title Our cases that we are proud of.
+        h2.title-h2.section__title Our cards that we are proud of.
         p.text-main.section__text From pre-seed to series, we accelerate the companies we believe in by generating serious brand equity, product traction.
 
-    .cases
-      each item in [1, 2, 3, 4]
-        .case
-          img(src=`/img/case/item-${item}.jpg`, alt="").case__img
-          h4.title-h3.case__title Project title number one
-          p.text-main.case__text From pre-seed to series, we accelerate the companies we believe in by generating serious brand equity, product traction, and market-penetrating strategies.
+        .swiper
+          .swiper-wrapper
+            each item in [1, 2, 3, 4]
+              .card.swiper-slide
+                img(src=`/img/card/item-${item}.jpg`, alt="").card__img.card__img--large
+                h4.title-h3.card__title Project title number one
+                p.text-main.card__text From pre-seed to series, we accelerate the companies we believe in by generating serious brand equity, product traction, and market-penetrating strategies.
 
   section.section-work
     .container
@@ -53,32 +54,34 @@ block content
           - for (var x = 1; x < 10; x++)
             img(src=`/img/work/item-${x}.svg`, alt="")
 
-  section.section-internal
+  section.section
     .container
       .container__inside
         h3.title-h2.section__title Our internal projects.
         p.text-main.section__text From pre-seed to series, we accelerate the companies we believe in by generating serious brand equity, product traction.
-        .case
-          img(src="/img/case/item-5.jpg", alt="").case__img
-          h4.title-h3.case__title Project title number one
-          p.text-main.case__text From pre-seed to series, we accelerate the companies we believe in by generating serious brand equity, product traction, and market-penetrating strategies.
-        .case
-          img(src="/img/case/item-6.jpg", alt="").case__img
-          h4.title-h3.case__title Project title number one
-          p.text-main.case__text From pre-seed to series, we accelerate the companies we believe in by generating serious brand equity, product traction, and market-penetrating strategies.
+        .section__posts
+          .card
+            img(src="/img/card/item-5.jpg", alt="").card__img.card__img--large
+            h4.title-h3.card__title Project title number one
+            p.text-main.card__text From pre-seed to series, we accelerate the companies we believe in by generating serious brand equity, product traction, and market-penetrating strategies.
+          .card
+            img(src="/img/card/item-6.jpg", alt="").card__img.card__img--large
+            h4.title-h3.card__title Project title number one
+            p.text-main.card__text From pre-seed to series, we accelerate the companies we believe in by generating serious brand equity, product traction, and market-penetrating strategies.
         
         a(href="#").link-main.section__more More our projects
 
-  section.section-about
+  section.section
     .container
       .container__inside
         h2.title-h2.section__title There is something to read about.
         p.text-main.section__text From pre-seed to series, we accelerate the companies we believe in by generating serious brand equity, product traction, and market-penetrating strategies.
 
-    .section-about__cards
-      each card in [1, 2, 3, 4]
-        .card
-          img(src=`/img/card/item-${card}.jpg`, alt="").card__img
-          h4.title-h3.card__title Blog title number one
-          p.text-main.card__text From pre-seed to series, we accelerate the companies we believe in by generating serious brand equity, product traction by generating serious brand.
-          a(href="#").link-main.card__link Read more
+        .swiper
+          .swiper-wrapper
+            each card in [1, 2, 3, 4]
+              .card.swiper-slide
+                img(src=`/img/card/item-${card}.jpg`, alt="").card__img
+                h4.title-h3.card__title Blog title number one
+                p.text-main.card__text From pre-seed to series, we accelerate the companies we believe in by generating serious brand equity, product traction by generating serious brand.
+                a(href="#").link-main.card__more Read more
