--- a/src/scss/base/_input.scss
+++ b/src/scss/base/_input.scss
@@ -1,4 +1,7 @@
-input[type=text] {
+input[type=text],
+input[type=email],
+input[type=tel],
+textarea {
   width: 100%;
   padding: 15px 0;
   font-size: 18px;
