--- a/src/scss/components/_card.scss
+++ b/src/scss/components/_card.scss
@@ -1,12 +1,47 @@
 .card {
+  // min-width: 550px;
+
+  // @media (min-width: 1400px) {
+  //   min-width: 683px;
+  // }
+
   &__img {
     display: block;
-    margin-bottom: 30px;
+    width: 100%;
     height: 230px;
+    margin-bottom: 30px;
     object-fit: cover;
 
-    @media (mix-width: 760px) {
+    @media (min-width: 760px) {
       height: 318px;
+    }
+
+    &--large {
+      height: 320px;
+
+      @media (min-width: 760px) {
+        height: 500px;
+      }
+
+      @media (min-width: 1200px) {
+        height: 550px;
+      }
+
+      @media (min-width: 1900px) {
+        height: 683px;
+      }
+    }
+
+    &--small {
+      height: 165px;
+
+      @media (min-width: 760px) {
+        height: 220px;
+      }
+
+      @media (min-width: 1900px) {
+        height: 273px;
+      }
     }
   }
 
