--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -1,4 +1,4 @@
-@import '../../node_modules/swiper/swiper-bundle.css';
+@import '../../node_modules/swiper/swiper.scss';
 
 @import './helper/settings';
 @import './helper/variables';
@@ -22,3 +22,4 @@
 
 @import './page/index';
 @import './page/blog';
+@import './page/about';
