--- a/src/scss/page/_index.scss
+++ b/src/scss/page/_index.scss
@@ -1,13 +1,11 @@
-section {
+.section {
   margin: 180px 0;
   overflow: hidden;
 
   @media (min-width: 760px) {
     margin: 260px 0;
   }
-}
 
-.section {
   &__title {
     margin-bottom: 20px;
   }
@@ -28,6 +26,17 @@ section {
     display: inline-block;
     margin-top: 80px;
   }
+
+  &__sitemap {
+    display: grid;
+    grid-template-columns: repeat(2, 230px);
+    gap: 20px;
+    margin-top: 80px;
+  }
+}
+
+.swiper {
+  overflow: visible;
 }
 
 .section-work {
@@ -42,37 +51,19 @@ section {
   }
 }
 
-.section-internal {
-  & .case ~ .case {
-    margin-top: 80px;
+.section-form {
+  &__subtitle {
+    margin-bottom: 30px;
   }
 
-  &__more {
-    margin-top: 80px;
-  }
-}
-
-.section-about {
-  &__cards {
-    display: flex;
-    gap: 50px;
-    overflow: auto;
-    scroll-snap-type: x mandatory;
-
-    & > * {
-      flex-shrink: 0;
-      flex-basis: 683px;
-      scroll-snap-align: start;
-
-      @media (max-width: 1899px) {
-        flex-basis: 550px;
-      }
+  & form {
+    & input,
+    & textarea {
+      margin-bottom: 30px;
     }
   }
-}
 
-.section-job {
-  & .card ~ .card {
-    margin-top: 80px;
+  &__text {
+    margin-top: 30px;
   }
 }
